fixes skippy scrollbar

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,8 @@
 html body {
     background-color: #ececec;
     color: #343a40;
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 a {
